<resources>
    <string name="app_name">Route Box</string>
    <string name="app_name_ver2">ROUTE BOX</string>
    <string name="app_name_first">ROUTE</string>
    <string name="app_name_second">BOX</string>
    <string name="menu_home">홈</string>
    <string name="menu_seek">탐색</string>
    <string name="menu_route">내 루트</string>
    <string name="menu_my">마이</string>
    <string name="kakao">카카오로 시작하기</string>
    <string name="signup_nickname_title">닉네임을 정해주세요</string>
    <string name="signup_nickname_et">닉네임을 입력해주세요</string>
    <string name="signup_nickname_btn">중복 확인</string>
    <string name="signup_nickname_condition">2~8자 이내(특수 문자 및 공백 제외)</string>
    <string name="signup_nickname_x">이 닉네임은 이미 다른 사람이 사용중이에요</string>
    <string name="signup_nickname_o">사용 가능한 닉네임이에요!</string>
    <string name="signup_birth">생일을 알려주세요</string>
    <string name="signup_birth_skip">건너뛰기</string>
    <string name="signup_birth_yy">YYYY</string>
    <string name="signup_birth_mm">MM</string>
    <string name="signup_birth_dd">DD</string>
    <string name="signup_gender_title">당신의 성별을 알려주세요</string>
    <string name="signup_gender_m">남자</string>
    <string name="signup_gender_f">여자</string>
    <string name="signup_gender_x">비공개</string>
    <string name="signup_complete">%s,\n루트박스에 온 걸 환영해요!</string>
    <string name="signup_term_1">(필수) 이용약관</string>
    <string name="signup_term_2">(필수) 개인정보수집이용동의</string>
    <string name="signup_term_optional_1">(선택) 위치 기반 서비스 이용약관</string>
    <string name="signup_term_optional_2">(선택) 알림 동의</string>
    <string name="signup_complete_btn">루트박스 시작하기</string>
    <string name="permission_title">편리한 루트박스의 이용을 위해\n아래 접근 권한의 허용이 필요합니다</string>
    <string name="permission_description">권한을 허용하지 않아도 서비스를 이용할 수 있어요</string>
    <string name="permission_location_info_title">위치 정보</string>
    <string name="permission_location_info_purpose">근처 편의시설 안내</string>
    <string name="permission_location_record">실시간 위치 정보</string>
    <string name="permission_location_record_purpose">루트 기록 시 이동 경로를 실시간으로 트래킹하기 위해\n백그라운드에서 위치 정보 사용</string>
    <string name="permission_alert">알림</string>
    <string name="permission_alert_purpose">기록과 혜택 및 이벤트 안내</string>
    <string name="route_style_preview">여행 루트 스타일 맛보기</string>
    <string name="home_top_cv_title">루트박스 200% 즐기는 방법?</string>
    <string name="home_top_cv_content">루트박스의 모든 것, 여기서 알려드립니다!</string>
    <string name="home_first_title">당신의 모든 여행을 위해</string>
    <string name="home_first_content1">내 여행 루트\n기록하러 가기</string>
    <string name="home_first_content2">다른 사람 루트\n구경하러 가기</string>
    <string name="home_second_title">오늘의 추천 루트</string>
    <string name="home_third_sub_title">여행 일정, 루트 박스가 대신 짜드립니다</string>
    <string name="home_third_title">오늘의 인기 루트</string>
    <string name="notification_empty">받은 알림이 없습니다.</string>
    <string name="route_kor">루트</string>
    <string name="my_wallet">내 지갑</string>
    <string name="own_point">님의 보유 포인트</string>
    <string name="refund">환급받기</string>
    <string name="charge">충전하기</string>
    <string name="point_history">포인트 내역</string>
    <string name="empty_point">아직 포인트 내역이 없습니다.</string>
    <string name="point">포인트</string>
    <string name="won">원</string>
    <string name="point_description">이용 안내</string>
    <string name="point_description_content">- 1캐쉬는 1원입니다.\n- 이용 안내 사항이 들어갑니다.</string>
    <string name="refund_price">환급금액</string>
    <string name="my_point">내 포인트</string>
    <string name="refund_point">환급받을 포인트</string>
    <string name="enter_point">포인트를 입력해주세요</string>
    <string name="refund_rule">포인트는 5,000P 단위로 전환 가능합니다.\n또한, 송금 수수료 500P 가 차감됩니다.</string>
    <string name="owner_title">예금주</string>
    <string name="enter_owner">예금주명을 입력해주세요</string>
    <string name="bank_title">은행</string>
    <string name="enter_bank">은행 선택</string>
    <string name="close">닫기</string>
    <string name="enter_account_number">계좌번호 입력(-제외)</string>
    <string name="apply_refund">환급 신청하기</string>
    <string name="agree_refund_title">환급을 위한 개인정보 수집 및 이용동의</string>
    <string name="refund_terms">예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.
    예시))) 문의하기 서비스 이용을 위하여 아래의 개인정보 이용에 대한 내용을 자세히 읽어 보신 후 동의 여부를 결정하여 주시기 바랍니다.\n1. 개인정보의 이용 목적 : 고객 문의에 대한 답변 제공 및 현황관리, 솔루션/마케팅 정보 제공\n2. 이용하는 개인정보의 항목 - 필수정보 : 성명(이름), 이메일, 연락처\n- 선택정보 : 회사명, 직급\n\n3. 개인정보의 이용기간 미라콤아이앤씨는 개인정보 이용목적이 달성된 후에는 해당 정보를 n지체 없이 파기합니다. 그러나 다음의 이유로 일정 기간 동안 해당 정보를 보유할 수도 있습니다.\n- 회사 정책에 따른 정보 보유\n∙ 항목 : 제공 동의된 필수정보\n∙ 사유 : 이용자의 문의내용 답변, 솔루션/마케팅 정보 제공\n∙ 기간 : 이용자가 웹사이트에 마지막 접속한 시점으로부터 3년 - 법령에 따른 정보의 보유 ∙ 소송이나 분쟁의 근거자료로 보존하는 목적이나 기타 관련법령에 의해 보존 의무가 있는 경우\n\n4. 귀하는 위와 같은 개인정보의 이용에 대한 동의를 거부할 수 있으며, 본 동의를 거부하시는 경우에는 문의하기 서비스를 이용할 수 없습니다.</string>
    <string name="delete_account2">회원탈퇴</string>
    <string name="check_delete_account_rule">탈퇴 전 확인해 주세요.</string>
    <string name="delete_account_rule">회원 탈퇴 시 개인 정보 처리 방침에 따라 탈퇴 후에도 90일간 보관되며, 90일이 지난 후에는 완전히 삭제됩니다.</string>
    <string name="delete_account_title">탈퇴 사유를 알려주세요.</string>
    <string name="delete_account_reason_not_useful">루트가 다양하지 않아서 유용하지 않음</string>
    <string name="delete_account_reason_difficult">여행 루트를 기록하기 어려움</string>
    <string name="delete_account_reason_different">다운로드시 기대한 내용과 앱이 다름</string>
    <string name="delete_account_reason_service">서비스 운영의 신뢰도가 낮음</string>
    <string name="write_content">내용을 작성해주세요</string>
    <string name="delete_account_btn">동의 및 탈퇴하기</string>
    <string name="report_title">해당 게시글을 신고하는 이유를 알려주세요.</string>
    <string name="report_reason_not_trip">여행 내용과 관련 없는 내용임</string>
    <string name="report_reason_advertising">광고/홍보성 게시글임</string>
    <string name="report_reason_lascivious">선정적이거나 폭력, 혐오적임</string>
    <string name="report_reason_unauthorized_use">무단 도용, 사칭, 저작권 침해가 의심됨</string>
    <string name="report_reason_personal_information">개인 정보 노출이 우려됨</string>
    <string name="report_reason_etc">기타</string>
    <string name="report_notice">신고자 정보는 익명으로 처리되며, 신고된 내용은 검토 후 조치됩니다.</string>
    <string name="report">신고하기</string>
    <string name="edittext_hint">작성해주세요</string>
</resources>