<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/selector_menu_home"
        android:title="@string/menu_home"
        android:enabled="true"
        app:showAsAction="always"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/selector_menu_search"
        android:title="@string/menu_search"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/routeFragment"
        android:icon="@drawable/selector_menu_route"
        android:title="@string/menu_route"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/myFragment"
        android:icon="@drawable/selector_menu_my"
        android:title="@string/menu_my"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>