<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_nickname_title"
            android:layout_marginStart="22dp"
            android:layout_marginTop="40dp"
            style="@style/heading_m"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/nickname_et"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:hint="@string/signup_nickname_et"
            android:background="@color/transparent"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/gray5"
            android:textColor="@color/title_black"
            android:textCursorDrawable="@null"
            android:maxLines="1"
            android:inputType="text"
            android:theme="@style/EditTextTheme"
            app:layout_constraintTop_toTopOf="@id/nickname_check_btn"
            app:layout_constraintBottom_toBottomOf="@id/nickname_check_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nickname_check_btn" />

        <Button
            android:id="@+id/nickname_check_btn"
            android:layout_width="69dp"
            android:layout_height="34dp"
            android:text="@string/signup_nickname_btn"
            android:layout_marginEnd="22dp"
            android:layout_marginTop="56dp"
            android:enabled="false"
            android:textSize="12sp"
            android:fontFamily="@font/pretendard_regular"
            android:background="@drawable/selector_nickname"
            android:textColor="@drawable/selector_nickname"
            app:layout_constraintStart_toEndOf="@id/nickname_et"
            app:layout_constraintTop_toBottomOf="@id/nickname_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/nickname_bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nickname_check_btn" />

        <TextView
            android:id="@+id/nickname_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_nickname_condition"
            android:textColor="@color/gray3"
            android:layout_marginTop="6dp"
            style="@style/body_r_xs"
            app:layout_constraintTop_toBottomOf="@id/nickname_bottom_line"
            app:layout_constraintStart_toStartOf="@id/nickname_bottom_line" />

        <TextView
            android:id="@+id/nickname_condition_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_nickname_o"
            android:textColor="@color/main"
            android:layout_marginTop="6dp"
            android:visibility="gone"
            style="@style/body_r_xs"
            app:layout_constraintTop_toBottomOf="@id/nickname_bottom_line"
            app:layout_constraintStart_toStartOf="@id/nickname_bottom_line" />

        <TextView
            android:id="@+id/nickname_condition_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_nickname_x"
            android:textColor="@color/red1_warning"
            android:layout_marginTop="6dp"
            android:visibility="gone"
            style="@style/body_r_xs"
            app:layout_constraintTop_toBottomOf="@id/nickname_bottom_line"
            app:layout_constraintStart_toStartOf="@id/nickname_bottom_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>