<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.daval.routebox.presentation.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/report_top_bar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:paddingHorizontal="26dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/close_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/body_b_l" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/report_top_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="22dp"
                    android:text="@string/check_delete_account_rule"
                    style="@style/body_b_m" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray7"
                    android:text="@string/delete_account_rule"
                    android:layout_marginTop="20dp"
                    android:padding="20dp"
                    style="@style/body_r_s" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account_title"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@id/report_top_bar"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/body_b_m"/>

                <CheckBox
                    android:id="@+id/delete_account_reason_not_useful_checkbox"
                    android:layout_marginTop="18dp"
                    android:onClick="@{viewModel::updateIsCheckedDeleteAccountReason}"
                    android:text="@string/delete_account_reason_not_useful"
                    android:layout_marginHorizontal="22dp"
                    style="@style/common_checkbox"/>

                <CheckBox
                    android:id="@+id/delete_account_reason_difficult_checkbox"
                    android:layout_marginTop="11dp"
                    android:onClick="@{viewModel::updateIsCheckedDeleteAccountReason}"
                    android:text="@string/delete_account_reason_difficult"
                    android:layout_marginHorizontal="22dp"
                    style="@style/common_checkbox"/>

                <CheckBox
                    android:id="@+id/delete_account_reason_different_checkbox"
                    android:layout_marginTop="11dp"
                    android:onClick="@{viewModel::updateIsCheckedDeleteAccountReason}"
                    android:text="@string/delete_account_reason_different"
                    android:layout_marginHorizontal="22dp"
                    style="@style/common_checkbox"/>

                <CheckBox
                    android:id="@+id/delete_account_reason_service_checkbox"
                    android:layout_marginTop="11dp"
                    android:onClick="@{viewModel::updateIsCheckedDeleteAccountReason}"
                    android:text="@string/delete_account_reason_service"
                    android:layout_marginHorizontal="22dp"
                    style="@style/common_checkbox"/>

                <CheckBox
                    android:id="@+id/report_reason_etc_checkbox"
                    android:layout_marginTop="11dp"
                    android:onClick="@{viewModel::updateIsCheckedDeleteAccountReason}"
                    android:text="@string/report_reason_etc"
                    android:layout_marginHorizontal="22dp"
                    style="@style/common_checkbox"/>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/delete_account_content_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginBottom="120dp"
                    android:visibility="@{viewModel.isEtcBtnChecked() ? View.VISIBLE : View.GONE}"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/gray5"
                    app:layout_constraintTop_toBottomOf="@id/place_title"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="20dp"
                        android:paddingHorizontal="16dp">

                        <EditText
                            android:id="@+id/delete_account_content_et"
                            android:layout_width="match_parent"
                            android:layout_height="245dp"
                            android:hint="@string/write_content"
                            android:text="@={viewModel.etcReasonDirectInput}"
                            android:background="@color/transparent"
                            android:gravity="top"
                            android:maxLength="400"
                            style="@style/body_r_s"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/delete_account_content_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(viewModel.etcReasonDirectInput.length())}"
                            android:textColor="@{viewModel.etcReasonDirectInput.length() > 0 ? @color/main : @color/gray4}"
                            style="@style/body_r_s"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/location_content_max" />

                        <TextView
                            android:id="@+id/delete_account_content_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="/400"
                            android:textColor="@color/main"
                            style="@style/body_r_s"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/delete_account_feed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="28dp"
            android:text="@string/delete_account_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/default_large_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>